[tidy] 主要增加JVM的内容